2008-05-29 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/EditWMSQueryPlugIn.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/EditWMSQueryPanel.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/URLWizardPanel.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/SRSWizardPanel.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/MapLayerWizardPanel.java:
      Added capability to select image format for WMS layers/requests.

2008-05-29 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Changed naming of rules for color theming styles.

2008-05-28 mentaer <sstein@geo.unizh.ch>
      Changed Thiessen polygon creation to be aware of the extent 
      of background layers. The code needs still some clean up 
      (for the enabling of layer selection in the dialog) and translation.
      changed:
      org.openjump.core.graph.delauneySimplexInsert.DTriangulationForJTS
      org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn 

2008-05-27 Paul Austin <paul.austin@revolsys.com>
      Added properties to tasks
      Added link from LayerManager to task
      Added getTask (via LayerManager) to AbstractLayerable and Category
      Added saving/loading QName values in the Xml2Java code
      
2008-05-27 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Added exporting of angle attribute for label styles.

2008-05-26 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java,
      src/com/vividsolutions/jump/util/Range.java:
      Added generics to RangeTreeMap.

2008-05-26 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/util/SLDImporter.java:
      Fixed import of external graphics.

2008-05-21 Andreas Schmitz <schmitz@lat-lon.de>