@@ -662,6 +662,8 @@ org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Creates-a-Delauna
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Create-Thiessen-Polygons = Crear pol\u00EDgonos Thiessen
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.create-triangulation = Crear triangulaci\u00F3n
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.no-point-geometry = No hay geometr\u00EDas de puntos.
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.use-background-layer = Use background layer?
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.background-layer-to-estimate-the-thiessen-polygon-size = background layer to estimate the border thiessen polygon size 
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.select-point-layer = Seleccione la capa de puntos
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.add-attributes-from-points = add attributes from points
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Error-found-multiple-points-in-polygon = Error\: found multiple points in polygon
