@@ -662,6 +662,8 @@ org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Creates-a-Delauna
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Create-Thiessen-Polygons = Cr\u00E9er un diagramme de Voronoi (Thiessen Polygons)
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.create-triangulation = cr\u00E9er la triangulation
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.no-point-geometry = aucune g\u00E9om\u00E9trie ponctuelle
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.use-background-layer = Use background layer?
+org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.background-layer-to-estimate-the-thiessen-polygon-size = background layer to estimate the border thiessen polygon size 
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.select-point-layer = s\u00E9lectionner la couche de points
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.add-attributes-from-points = add attributes from points
 org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn.Error-found-multiple-points-in-polygon = Error\: found multiple points in polygon
